# open_spiel

open_spiel/: CMakeLists.txt
open_spiel/algorithms/: CMakeLists.txt
open_spiel/examples/: CMakeLists.txt
open_spiel/games/: CMakeCache.txt  CMakeLists.txt
open_spiel/games/twixt/: twixt.cc  twixt.h  twixt_test.cc  twixtboard.cc  twixtboard.h  twixtcell.h
open_spiel/python/examples/: test.txt  twixt_dqn.py
open_spiel/scripts/: build_and_run_tests.sh
open_spiel/tests/: CMakeLists.txt
open_spiel/utils/: CMakeLists.txt
